# aiotdlib

./: .gitignore  CHANGELOG.md  Dockerfile  Earthfile  LICENSE  MANIFEST.in  README.md  build.py  build_linux.sh  build_mac.sh  dev-requirements.txt  docs-requirements.txt  hatch_build.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  publish.yml  pypi_only.yml
aiotdlib/: __init__.py  authorization.py  client.py  client_cache.py  client_settings.py  constants.py  decorators.py  filters.py  handlers.py  middlewares.py  tdjson.py  types.py  utils.py
aiotdlib/api/: __init__.py  api.py  base_object.py
aiotdlib/api/errors/: __init__.py  error.py
aiotdlib/api/functions/: __init__.py  accept_call.py  accept_terms_of_service.py  activate_story_stealth_mode.py  add_application_changelog.py  add_bot_media_preview.py  add_chat_folder_by_invite_link.py  add_chat_member.py  add_chat_members.py  add_chat_to_list.py  add_contact.py  add_custom_server_language_pack.py  add_favorite_sticker.py  add_file_to_downloads.py  add_local_message.py  add_log_message.py  add_message_reaction.py  add_network_statistics.py  add_pending_paid_message_reaction.py  add_proxy.py  add_quick_reply_shortcut_inline_query_result_message.py  add_quick_reply_shortcut_message.py  add_quick_reply_shortcut_message_album.py  add_recent_sticker.py  add_recently_found_chat.py  add_saved_animation.py  add_saved_notification_sound.py  add_sticker_to_set.py  allow_bot_to_send_messages.py  allow_unpaid_messages_from_user.py  answer_callback_query.py  answer_custom_query.py  answer_inline_query.py  answer_pre_checkout_query.py  answer_shipping_query.py  answer_web_app_query.py  apply_premium_gift_code.py  approve_chat_join_request.py  assign_app_store_transaction.py  assign_google_play_transaction.py  (+850 more)
aiotdlib/api/types/: __init__.py  account_ttl.py  added_reaction.py  added_reactions.py  address.py  all.py  animated_chat_photo.py  animated_emoji.py  animation.py  animations.py  attachment_menu_bot.py  attachment_menu_bot_color.py  audio.py  authentication_code_info.py  authentication_code_type.py  authorization_state.py  auto_download_settings.py  auto_download_settings_presets.py  available_reaction.py  available_reactions.py  background.py  background_fill.py  background_type.py  backgrounds.py  bank_card_action_open_url.py  bank_card_info.py  base.py  basic_group.py  basic_group_full_info.py  bot_command.py  bot_command_scope.py  bot_commands.py  bot_info.py  bot_menu_button.py  call.py  call_discard_reason.py  call_id.py  call_problem.py  call_protocol.py  call_server.py  (+313 more)
aiotdlib/tdlib/: .gitignore
aiotdlib_generator/: __main__.py  generator.py
aiotdlib_generator/parser/: __init__.py  entities.py  parser.py  utils.py
aiotdlib_generator/templates/: api_template.py.jinja  api_template.py.jinja2  api_template.pyi  base_class_template.py.jinja2  base_class_template.pyi  class_template.py.jinja  functions_package_init_template.py.jinja2  functions_template.py.jinja2  package_init_template.py.jinja  package_init_template.py.jinja2  section_init_template.pyi  types_package_init_template.py.jinja2  types_template.py.jinja2
builder/: Earthfile  build_linux.sh  build_mac.sh
docs/source/: aiotdlib.api.errors.rst  aiotdlib.api.functions.rst  aiotdlib.api.rst  aiotdlib.api.types.rst  aiotdlib.rst  conf.py  examples.md  index.rst  modules.rst
generator/: __main__.py  generator.py
generator/api/: generator.py
generator/api/templates/: api_template.pyi  class_template.pyi  package_init_template.pyi
generator/parser/: __init__.py  entities.py  parser.py
generator/templates/: api_template.pyi  base_class_template.pyi  class_template.pyi  package_init_template.pyi  section_init_template.pyi
tests/: README.md  conftest.py  shared_client.py  test_client.py  test_login.py
