[tool.poetry]
name = "aiotdlib"
version = "0.19.2"
description = "Python asyncio Telegram client based on TDLib"
authors = ["pylakey <pylakey@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pylakey/aiotdlib"
repository = "https://github.com/pylakey/aiotdlib"
packages = [
    { include = "aiotdlib" },
    { include = "aiotdlib_generator" },
]
include = [
    "README.md",
    "CHANGELOG.md",
]
classifiers = [
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
sortedcontainers = "^2.4.0"
ujson = "^5.4.0"

[tool.poetry.dev-dependencies]
Jinja2 = "^3.1.2"

[tool.poetry.scripts]
aiotdlib_generator = "aiotdlib_generator.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
