[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiotdlib"
dynamic = ["version"]
description = "Python asyncio Telegram client based on TDLib"
authors = [
    { name = "pylakey", email = "pylakey@protonmail.com" }
]
maintainers = [
    { name = "pylakey", email = "pylakey@protonmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
homepage = "https://github.com/pylakey/aiotdlib"
repository = "https://github.com/pylakey/aiotdlib"
classifiers = [
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2,<3",
    "sortedcontainers>=2.4.0",
    "ujson>=5",
    "pydantic-settings>=2.1.0,<3",
]

[project.optional-dependencies]
dev = [
    "Jinja2>=3.1.3",
    "pydash>=7.0.4",
    "black>=23.3,<25.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
]

[project.urls]
Source = "https://github.com/pylakey/aiotdlib"
Homepage = "https://github.com/pylakey/aiotdlib"

[project.scripts]
aiotdlib_generator = "aiotdlib_generator.__main__:main"

[tool.hatch.version]
path = "aiotdlib/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.sdist]
artifacts = [
    "aiotdlib/tdlib/*",
]
exclude = [
    "**/__pycache__",
    "**/*.py[cod]"
]

[tool.hatch.build.targets.wheel]
only-packages = true
artifacts = [
    "aiotdlib/tdlib/*",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--import-mode=importlib --log-cli-level=DEBUG"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = [
    "tests",
]
