[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiotdlib"
dynamic = ["version"]
description = "Python asyncio Telegram client based on TDLib"
authors = [{ name = "pylakey", email = "pylakey@protonmail.com" }]
maintainers = [{ name = "pylakey", email = "pylakey@protonmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2,<3",
    "sortedcontainers>=2.4.0",
    "ujson>=5",
    "pydantic-settings>=2.1.0,<3",
]

[project.optional-dependencies]
dev = ["Jinja2>=3.1.3", "pydash>=7.0.4", "black>=23.3,<25.0"]

[project.urls]
Source = "https://github.com/pylakey/aiotdlib"
Homepage = "https://github.com/pylakey/aiotdlib"

[project.scripts]
aiotdlib_generator = "aiotdlib_generator.__main__:main"

[tool.hatch.version]
path = "aiotdlib/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.sdist]
exclude = [
    "**/__pycache__",
    "**/*.py[cod]",
    "tdlib/*.so",
    "tdlib/*.dylib",
    "aiotdlib/tdlib/*.so",
    "aiotdlib/tdlib/*.dylib",
    "*.so",
    "*.dylib",
]

[tool.hatch.build.targets.wheel]
only-packages = true
artifacts = ["aiotdlib/tdlib/*"]
packages = ["aiotdlib"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"


[tool.ruff]
src = ["aiotdlib"]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
extend-select = ["I"]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear
    "I001", # isort,
    "D403", # docstring
]
ignore = ["E501"]


[tool.ruff.lint.isort]
known-first-party = ["aiotdlib"]
